--- a/practica1_Chanona_221233_practica1_Balbuena_221229/index.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/index.html
@@ -26,9 +26,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Donacion.html">Donacion</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Informacion_Apoyo.html">Informacion de apoyo</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Galeria.html">Galeria</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="html/Donacion.html">Donacion</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="html/Informacion_Apoyo.html">Informacion de apoyo</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="html/Galeria.html">Galeria</a></li>
                     </ul>
                 </div>
             </div>
