registro de usuarios

--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/index.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row align-items-end justify-content-center eslog">
                 <div class="col-5">
-                    <h1 class="text-center texe">Bienvenido a <span id="appName"></span></h1>
+                    <h1 class="text-center texe">Bienvenido a TexCology</span></h1>
                     <h2 class="text-center texe">
                         Estas a un solo paso de 
 
