PMV sin busqueda

--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Historial.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Historial.html
@@ -41,8 +41,8 @@
                             </form>
                         </div>
                     </div>
-                    <div class="row justify-content-center mt">
-                        <div class="col-9">
+                    <div class="row justify-content-center mt" id="listaDonaciones">
+                        <!-- <div class="col-9">
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Donante: <span id="nombreDonador"></span></h5>
@@ -58,7 +58,7 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
