PVM sin buscador xd

--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Donacion.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Donacion.html
@@ -21,8 +21,8 @@
                     <div class="col-1">
                         <img src="../assets/tex.png" class="img-fluid logo">
                     </div>
-                    <div class="col-3">
-                        <h2>TexCology</h1>
+                    <div class="col-3 text">
+                        <h2>TexCology</h2>
                     </div>
                     <div class="col-2 offset-6">
                         <a href="Home.html"><img
