--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Sobre_nosotros.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Sobre_nosotros.html
@@ -1,42 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre nosotros</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/global.css">
-</head>
-<body>
-  <main>
-    <img class="tn" src="../assets/img_info/image 4.png"> 
-    <img class="im" src="../assets/img_info/image 3.png">
-    <img class="home" src="../assets/img_info/3643769-building-home-house-main-menu-start_113416 1.png">
-    <img class="text5" src="../assets/img_info/image 1.png">
-    <div class="text"></div>
-    <div class="text2"></div>
-    <div class="text3"></div>
-    <div class="text4"></div>
-    <div class="title2">SobreNosotros</div>
-    <div class="inf">¿Que es TexCology?</div>
-    <div class="inf2">
-      Texcology es una aplicación que se centra en la problemática del exceso de ropa que existe en el planeta y por las personas que no tiene 
-      los recursos para comprarse prendas, lo principal de esta aplicación es que recibe donaciones de ropa para crear y dar una segunda vida 
-      a las prendas y a la vez ayudamos al planeta contaminar menos. 
-    </div>
-    <div class="text5">Vision</div>
-    <div class="inf3">
-      Texcology quiere ser reconocida como una organización líder y consolidada en materia ambiental, 
-      comprometida con el mejoramiento de la calidad de vida de la población y el manejo sostenible de los recursos naturales, 
-      en un mundo donde los pueblos vivan en igualdad y con conciencia de nuestro planeta. 
-    </div>
-    <div class="text6">Mision</div>
-    <div class="inf4">La misión es entregar vestimenta a las personas más vulnerables del país, 
-      en favor  de contribuir  a alcanzar una mejor calidad de vida a quienes más lo necesitan 
-    </div>
+<html lang="es">
 
-  </main>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sobre Nosotros</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="../style/global.css">
+  <link rel="stylesheet" href="../style/sobre-nosotros.css">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <header class="row justify-content-center">
+      <div class="col-11 header-p">
+        <div class="row align-items-center">
+          <div class="col-1">
+            <img src="../assets/tex.png" class="img-fluid logo">
+          </div>
+          <div class="col-3 text">
+            <h2>TexCology</h2>
+          </div>
+          <div class="col-2 offset-6">
+            <a href="Home.html"><img src="../assets/img_info/3643769-building-home-house-main-menu-start_113416 1.png"
+                class="logo-home"></a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="row justify-content-center empujon">
+          <div class="col-3 align-items-center text">
+            <h1>Sobre nosotros</h1>
+          </div>
+        </div>
+
+        <div class="conteiner">
+          <div class="card">
+            <img src="../assets/img/duda.png" alt="">
+            <h4 class="empujon">¿Qué es TexCology?</h4>
+            <p>
+              Texcology es una aplicación que se centra en la problemática del exceso de ropa que existe en el planeta,
+              y
+              del como este contamina
+              el medio ambiente, la aplicación centra su atención en personas que no tiene los recursos para vestir,
+              brindando así al publico
+              la oportunidad de darle un segundo uso a la ropa que ya no necesiten. TexCology ofrece un control de
+              donaciones que te permiten a ti
+              como donante, llevar un control y rastreo de tus donativos. Esto con la finalidad de reducir la
+              contaminación en el mundo,
+              y dificultades de algunos pueblos.
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="../assets/img/mision1.png" alt="">
+            <h4 class="empujon">Visión</h4>
+            <p>
+              Texcology pretende ser reconocida como una organización líder y consolidada en materia ambiental,
+              comprometida con el mejoramiento
+              de la calidad de vida de la población y el manejo sostenible de los recursos naturales, en un mundo donde
+              los pueblos vivan
+              calidos y en conciencia de nuestro planeta.
+            </p>
+            <a href="#">Leer mas</a>
+          </div>
+
+          <div class="card">
+            <img src="../assets/img/VISION.png" alt="">
+            <h4 class="empujon">Misión</h4>
+            <p>
+              Entregar vestimenta a las personas más vulnerables del país, en favor de contribuir a alcanzar
+              una mejor calidad de vida a quienes más lo necesitan.
+            </p><a href="#">Leer mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </body>
+
 </html>
