--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Galeria.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Galeria.html
@@ -1,104 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>Galeria de capturas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/galeria.css">
     <link rel="stylesheet" href="../style/global.css">
 </head>
+
 <body>
+    <div class="container-fluid">
+        <header class="row justify-content-center">
+            <div class="col-11 header-p">
+                <div class="row align-items-center">
+                    <div class="col-1">
+                        <img src="../assets/tex.png" class="img-fluid logo">
+                    </div>
+                    <div class="col-2 text">
+                        <h2>TexCology</h2>
+                    </div>
+                    <div class="col-6 justify-content-center text">
+                        <h1>Galeria de Donaciones</h1>
+                    </div>
+                    <div class="col-3 offset">
+                        <a href="Home.html">
+                            <img src="../assets/img_info/3643769-building-home-house-main-menu-start_113416 1.png" class="logo-home">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-<h2><center>Galeria de donaciones</center></h2>
+        <div class="container bg-container">
+            <div class="ful-img" id="fullImgbox">
+                <img src="/img/num1.jpg" id="fullimg" alt="">
+                <span onclick="closeImg()">X</span>
+            </div>
+        
+            <div class="img-gallery">
+                <div class="row mt">
+                    <div class="col-3">
+                        <img src="../assets/img_info/num1.jpg" onclick="openImg(this.src)" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../assets/img_info/num2.jpeg" onclick="openImg(this.src)" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../assets/img_info/num3.jpg" onclick="openImg(this.src)" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../assets/img_info/num4.jpg" onclick="openImg(this.src)" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center mt-g">
+                <h3><b>Donaciones realizadas en el mes de Julio</b></h3>
+            </div>
 
-<h4><center>Fotos del mes de Marzo del 2022</center></h4>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num1.jpg">
-      <img src="../assets/img_info/num1.jpg" alt="Primera donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la primera semana de Marzo</div>
-  </div>
-</div>
-
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num2.jpg">
-      <img src="../assets/img_info/num2.jpg" alt="Segunda donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la segunda semana de Marzo
+            <div class="img-gallery">
+                <div class="row mt-g">
+                    <div class="col-3">
+                        <img src="../assets/img_info/num5.jpg" onclick="openImg(this.src)" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../assets/img_info/pobre6.jpg" onclick="openImg(this.src)" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../assets/img_info/num7.png" onclick="openImg(this.src)" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../assets/img_info/v2num8.png" onclick="openImg(this.src)" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center mt-g">
+                <h3><b>Donaciones realizadas en el mes de Noviembre</b></h3>
+            </div>
     </div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num3.png">
-      <img src="../assets/img_info/num3.png" alt="Tercera donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la tercera semana de Marzo</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num4.png">
-      <img src="../assets/img_info/num4.png" alt="cuarta donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la ultima semana de Marzo</div>
-  </div>
-</div>
-
-<div class="clearfix"></div>
-
-<h4><center>Fotos del mes de octubre del 2022</center></h4>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num5.jpg">
-      <img src="../assets/img_info/num5.jpg" alt="quienta donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la primera semana de octubre</div>
-  </div>
-</div>
-
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num6.jpg">
-      <img src="../assets/img_info/num6.jpg" alt="Sexta donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la segunda semana de octubre</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num7.png">
-      <img src="../assets/img_info/num7.png" alt="septima donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la tercera semana de octubre</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="../assets/img_info/num8.png">
-      <img src="../assets/img_info/num8.png" alt="octaba donacion" width="600" height="400">
-    </a>
-    <div class="desc">Entregas de donaciones realizadas en la ultima semana de octubre</div>
-  </div>
-</div>
-
-<div class="clearfix"></div>
-
-<div style="padding:6px;">
-  
-</div>
-
+        <script src="../js/galeria.js"></script>
 </body>
+
 </html>
