--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Historial.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Historial.html
@@ -21,8 +21,8 @@
                         <div class="col-1">
                             <img src="../assets/tex.png" class="img-fluid logo"> 
                         </div>
-                        <div class="col-2">
-                            <h2>TexCology</h1>
+                        <div class="col-2 text">
+                            <h2>TexCology</h2>
                         </div>
                         <div class="col-5 textoP text-center">
                             <h2>--Historial de donaciones--</h2>
