--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Home.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Home.html
@@ -15,13 +15,15 @@
         <header class="row justify-content-center">
             <div class="col-11 header-p">
                 <div class="row align-items-center">
-                    <div class="col-1">
+                    <div class="col-2 col-lg-1">
                         <img src="../assets/tex.png" class="img-fluid logo"> 
                     </div>
-                    <div class="col-3 text">
-                        <h2>TexCology</h1>
+                    <div class="col-2 col-lg-3 text">
+                        <div class="row justify-content-start">
+                            <h2 class="ptm">TexCology</h2>
+                        </div>
                     </div>
-                    <div class="col-3 offset-5">
+                    <div class="col-8 col-xl-3 offset-xl-5">
                         <div class="row align-items-center">
                             <div class="col-6">
                                 <button class="btn-nav btn btn-outline-info botones" onclick="historial()">Historial</button>
@@ -51,32 +53,33 @@
                 <div class="container">
                     <div class="row text-center">
                         <h1 class="textoB">Bienvenido a TexCology</h1>
-                    </div>
-                    <div class="row align-items-start">
-                        <div class="col-4">
-                        </div>
-                        <div class="col-4 text-center">
-                            <p class="parrafo">
-                                <b>¿Tienes demasiada ropa y no sabes que hacer con ella?</b>
-                            </p>
-                            <p class="parrafo">
-                                Permítete saber que en la Ciudad de México,
-                                se desechan tres mil 700 millones de toneladas de residuos textiles al año,
-                                del cual, solo el uno por ciento es reciclado.        
-                            </p>
-                            <p class="parrafo">
-                                Pero tú puedes lograr el cambio, registra tu donativo y TexCology
-                                se encargara de hacer llegar la ropa a personas que lo necesiten.
-                            </p>
-                            <div class="row">
-                                <div class="col-12">
-                                    <button class="btn-d" onclick="donacion()">Donación</button>
+                        <div class="row align-items-start">
+                            <div class="col-4">
+                            </div>
+                            <div class="col-12 col-xxl-4 text-center">
+                                <p class="parrafo">
+                                    <b>¿Tienes demasiada ropa y no sabes que hacer con ella?</b>
+                                </p>
+                                <p class="parrafo">
+                                    Permítete saber que en la Ciudad de México,
+                                    se desechan tres mil 700 millones de toneladas de residuos textiles al año,
+                                    del cual, solo el uno por ciento es reciclado.        
+                                </p>
+                                <p class="parrafo">
+                                    Pero tú puedes lograr el cambio, registra tu donativo y TexCology
+                                    se encargara de hacer llegar la ropa a personas que lo necesiten.
+                                </p>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <button class="btn-d" onclick="donacion()">Donación</button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-4">
+                            <div class="col-4">
+                            </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
