--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Ayuda.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Ayuda.html
@@ -36,7 +36,7 @@
 	</div>
 
 	<main>
-		<h1 class="titulo">Preguntas Frecuentes</h1>
+		<h1 class="titulo colorsito">Preguntas Frecuentes</h1>
 		<div class="categorias" id="categorias">
 			<div class="categoria activa" data-categoria="metodos-pago">
 				
