--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Ficha.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Ficha.html
@@ -29,13 +29,13 @@
         </header>
         <div class="container">
             <div class="row text-center">
-                <h1>TexCology</h1>
+                <h1 class="colorsito">TexCology</h1>
             </div>
             <div class="row text-center">
-                <h4>Comprobante de donación</h4>
+                <h4 class="colorsito">Comprobante de donación</h4>
             </div>
             <div class="row text-center">
-                <h5>------Ficha donativo------</h5>
+                <h5 class="colorsito">------Ficha donativo------</h5>
             </div>
         </div>
             <div class="row justify-content-center">
@@ -47,23 +47,28 @@
                         </div>
                         <div class="row justify-content-center">
                             <h3>Lugar:</h3>
-                            <b id="sucursal"></b>
+                            <b id="sucursal">.</b>
                         </div>
                         <div class="row justify-content-center">
                             <h3>Fecha:</h3>
-                            <b id="fecha"></b>
+                            <b id="fecha">.</b>
+                        </div>
+                        <div class="row justify-content-center">
+                            <h4>Codigo de rastreo:</h4>
+                            <b id="codGuia"></b>
                         </div>
                         <br>
                         <div class="row justify-content-center">
                             <b>
-                                <p>Esta ficha muestra los datos de tu donativo para que <br>
-                                    puedas acudir a la sucursal de tu preferencia <br>
-                                    en caso de alguna aclaración, <br> 
-                                    asi no tendremos inconvenientes para tu atencion, <br>
-                                    te recordamos que la sucursal abre los dias: <br> <br>
+                                <p>Esta ficha muestra los datos de tu donativo <br> para que
+                                    puedas acudir a la sucursal de <br> 
+                                    tu preferencia. <br>
+                                    En caso de alguna aclaración, <br> 
+                                    presenta esta ficha para evitar <br> inconvenientes con tu atencion. <br>
+                                    Te recordamos que la sucursal abre los dias: <br> <br>
                                     Lunes-Viernes de 8:00am a 4:00pm <br>
                                     Sabados y Domingos de 9:00am a 2:00pm <br> <br>
-                                    TexCology agradece tu donativo :D
+                                    El equipo de TexCology agradece tu donación :D
                                 </p>
                             </b>
                             
