--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/index.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,9 +33,9 @@
 
                         ayudar a las personas
                         
-                        brindando una donacion de
+                        brindando una donación de
                         
-                        toda  la ropa que desees
+                        toda  la ropa que desees.
                     </h2>
                 </div>
             </div>
