--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Historial.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Historial.html
@@ -36,8 +36,8 @@
                     <div class="row justify-content-center">
                         <div class="col-10 busqueda">
                             <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                                <input class="form-control me-2" type="search" id="buscador" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-success " type="button" onclick="buscar()">Buscar</button>
                             </form>
                         </div>
                     </div>
@@ -66,5 +66,6 @@
          
     </div>
     <script src="../js/datosHistorial.js"></script>
+    <script src="../js/buscador.js"></script>
 </body>
 </html>
