--- a/practica1_Chanona_221233_practica1_Balbuena_221229/html/Sobre_nosotros.html
+++ b/practica1_Chanona_221233_practica1_Balbuena_221229/html/Sobre_nosotros.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="row justify-content-center empujon">
           <div class="col-3 align-items-center text">
-            <h1>Sobre nosotros</h1>
+            <h1 class="colorsito">Sobre nosotros</h1>
           </div>
         </div>
 
